// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check the behavior of the network service: When API throws an error 1`] = `[Error: Some API Error]`;

exports[`check the behavior of the network service: fetched brand based products successfully 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "
  query fetchProducts($first: Int!, $productType: String, $after: String) {
    products(first: $first, after:$after, where: {productType: $productType}, orderBy: rating_DESC) {
      id
      name
      description
      rating
      price
      brand
      tagList
      category
      productType
      apiFeaturedImage
      websiteLink
      productLink
    }
  }
  ",
      Object {
        "after": undefined,
        "first": 2,
        "productType": "lipstick",
      },
    ],
    Array [
      "
  query fetchProducts($first: Int!, $brand: String, $after: String) {
    products(first: $first, after:$after, where: {brand: $brand}, orderBy: rating_DESC) {
      id
      name
      description
      rating
      price
      brand
      tagList
      category
      productType
      apiFeaturedImage
      websiteLink
      productLink
    }
  }
  ",
      Object {
        "after": undefined,
        "brand": "lipstick",
        "first": 2,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "_U": 0,
        "_V": 1,
        "_W": Object {
          "data": Object {
            "products": Array [
              Object {
                "apiFeaturedImage": "//s3.amazonaws.com/donovanbailey/products/api_featured_images/000/001/047/original/open-uri20180708-4-e7idod?1531087336",
                "brand": "colourpop",
                "category": "lipstick",
                "description": "Blotted Lip Sheer matte lipstick that creates the perfect popsicle pout!",
                "id": "cl4cev9d83lgp0cpnot1lngtf",
                "name": "Blotted Lip",
                "price": "5.5",
                "productLink": "https://colourpop.com/collections/lippie-stix?filter=blotted-lip",
                "productType": "lipstick",
                "tagList": Array [
                  "cruelty free",
                  "Vegan",
                ],
                "websiteLink": "https://colourpop.com",
              },
              Object {
                "apiFeaturedImage": "//s3.amazonaws.com/donovanbailey/products/api_featured_images/000/001/046/original/open-uri20180708-4-1f333k1?1531086651",
                "brand": "colourpop",
                "category": "lipstick",
                "description": "Lippie Stix Formula contains Vitamin E",
                "id": "cl4cev9c23lgg0cpnu4zl3ykg",
                "name": "Lippie Stix",
                "price": "5.5",
                "productLink": "https://colourpop.com/collections/lippie-stix",
                "productType": "lipstick",
                "tagList": Array [
                  "cruelty free",
                  "Vegan",
                ],
                "websiteLink": "https://colourpop.com",
              },
            ],
          },
        },
        "_X": null,
      },
    },
    Object {
      "type": "return",
      "value": Promise {
        "_U": 0,
        "_V": 1,
        "_W": Object {
          "data": Object {
            "products": Array [
              Object {
                "apiFeaturedImage": "//s3.amazonaws.com/donovanbailey/products/api_featured_images/000/001/047/original/open-uri20180708-4-e7idod?1531087336",
                "brand": "colourpop",
                "category": "lipstick",
                "description": "Blotted Lip Sheer matte lipstick that creates the perfect popsicle pout!",
                "id": "cl4cev9d83lgp0cpnot1lngtf",
                "name": "Blotted Lip",
                "price": "5.5",
                "productLink": "https://colourpop.com/collections/lippie-stix?filter=blotted-lip",
                "productType": "lipstick",
                "tagList": Array [
                  "cruelty free",
                  "Vegan",
                ],
                "websiteLink": "https://colourpop.com",
              },
              Object {
                "apiFeaturedImage": "//s3.amazonaws.com/donovanbailey/products/api_featured_images/000/001/046/original/open-uri20180708-4-1f333k1?1531086651",
                "brand": "colourpop",
                "category": "lipstick",
                "description": "Lippie Stix Formula contains Vitamin E",
                "id": "cl4cev9c23lgg0cpnu4zl3ykg",
                "name": "Lippie Stix",
                "price": "5.5",
                "productLink": "https://colourpop.com/collections/lippie-stix",
                "productType": "lipstick",
                "tagList": Array [
                  "cruelty free",
                  "Vegan",
                ],
                "websiteLink": "https://colourpop.com",
              },
            ],
          },
        },
        "_X": null,
      },
    },
  ],
}
`;

exports[`check the behavior of the network service: fetched category based products successfully 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "
  query fetchProducts($first: Int!, $productType: String, $after: String) {
    products(first: $first, after:$after, where: {productType: $productType}, orderBy: rating_DESC) {
      id
      name
      description
      rating
      price
      brand
      tagList
      category
      productType
      apiFeaturedImage
      websiteLink
      productLink
    }
  }
  ",
      Object {
        "after": undefined,
        "first": 2,
        "productType": "lipstick",
      },
    ],
    Array [
      "
  query fetchProducts($first: Int!, $brand: String, $after: String) {
    products(first: $first, after:$after, where: {brand: $brand}, orderBy: rating_DESC) {
      id
      name
      description
      rating
      price
      brand
      tagList
      category
      productType
      apiFeaturedImage
      websiteLink
      productLink
    }
  }
  ",
      Object {
        "after": undefined,
        "brand": "lipstick",
        "first": 2,
      },
    ],
    Array [
      "
  query fetchProducts($first: Int!, $category: String, $after: String) {
    products(first: $first, after:$after, where: {category: $category}, orderBy: price_ASC) {
      id
      name
      description
      rating
      price
      brand
      tagList
      category
      productType
      apiFeaturedImage
      websiteLink
      productLink
    }
  }
  ",
      Object {
        "after": undefined,
        "category": "lipstick",
        "first": 2,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "_U": 0,
        "_V": 1,
        "_W": Object {
          "data": Object {
            "products": Array [
              Object {
                "apiFeaturedImage": "//s3.amazonaws.com/donovanbailey/products/api_featured_images/000/001/047/original/open-uri20180708-4-e7idod?1531087336",
                "brand": "colourpop",
                "category": "lipstick",
                "description": "Blotted Lip Sheer matte lipstick that creates the perfect popsicle pout!",
                "id": "cl4cev9d83lgp0cpnot1lngtf",
                "name": "Blotted Lip",
                "price": "5.5",
                "productLink": "https://colourpop.com/collections/lippie-stix?filter=blotted-lip",
                "productType": "lipstick",
                "tagList": Array [
                  "cruelty free",
                  "Vegan",
                ],
                "websiteLink": "https://colourpop.com",
              },
              Object {
                "apiFeaturedImage": "//s3.amazonaws.com/donovanbailey/products/api_featured_images/000/001/046/original/open-uri20180708-4-1f333k1?1531086651",
                "brand": "colourpop",
                "category": "lipstick",
                "description": "Lippie Stix Formula contains Vitamin E",
                "id": "cl4cev9c23lgg0cpnu4zl3ykg",
                "name": "Lippie Stix",
                "price": "5.5",
                "productLink": "https://colourpop.com/collections/lippie-stix",
                "productType": "lipstick",
                "tagList": Array [
                  "cruelty free",
                  "Vegan",
                ],
                "websiteLink": "https://colourpop.com",
              },
            ],
          },
        },
        "_X": null,
      },
    },
    Object {
      "type": "return",
      "value": Promise {
        "_U": 0,
        "_V": 1,
        "_W": Object {
          "data": Object {
            "products": Array [
              Object {
                "apiFeaturedImage": "//s3.amazonaws.com/donovanbailey/products/api_featured_images/000/001/047/original/open-uri20180708-4-e7idod?1531087336",
                "brand": "colourpop",
                "category": "lipstick",
                "description": "Blotted Lip Sheer matte lipstick that creates the perfect popsicle pout!",
                "id": "cl4cev9d83lgp0cpnot1lngtf",
                "name": "Blotted Lip",
                "price": "5.5",
                "productLink": "https://colourpop.com/collections/lippie-stix?filter=blotted-lip",
                "productType": "lipstick",
                "tagList": Array [
                  "cruelty free",
                  "Vegan",
                ],
                "websiteLink": "https://colourpop.com",
              },
              Object {
                "apiFeaturedImage": "//s3.amazonaws.com/donovanbailey/products/api_featured_images/000/001/046/original/open-uri20180708-4-1f333k1?1531086651",
                "brand": "colourpop",
                "category": "lipstick",
                "description": "Lippie Stix Formula contains Vitamin E",
                "id": "cl4cev9c23lgg0cpnu4zl3ykg",
                "name": "Lippie Stix",
                "price": "5.5",
                "productLink": "https://colourpop.com/collections/lippie-stix",
                "productType": "lipstick",
                "tagList": Array [
                  "cruelty free",
                  "Vegan",
                ],
                "websiteLink": "https://colourpop.com",
              },
            ],
          },
        },
        "_X": null,
      },
    },
    Object {
      "type": "return",
      "value": Promise {
        "_U": 0,
        "_V": 1,
        "_W": Object {
          "data": Object {
            "products": Array [
              Object {
                "apiFeaturedImage": "//s3.amazonaws.com/donovanbailey/products/api_featured_images/000/001/047/original/open-uri20180708-4-e7idod?1531087336",
                "brand": "colourpop",
                "category": "lipstick",
                "description": "Blotted Lip Sheer matte lipstick that creates the perfect popsicle pout!",
                "id": "cl4cev9d83lgp0cpnot1lngtf",
                "name": "Blotted Lip",
                "price": "5.5",
                "productLink": "https://colourpop.com/collections/lippie-stix?filter=blotted-lip",
                "productType": "lipstick",
                "tagList": Array [
                  "cruelty free",
                  "Vegan",
                ],
                "websiteLink": "https://colourpop.com",
              },
              Object {
                "apiFeaturedImage": "//s3.amazonaws.com/donovanbailey/products/api_featured_images/000/001/046/original/open-uri20180708-4-1f333k1?1531086651",
                "brand": "colourpop",
                "category": "lipstick",
                "description": "Lippie Stix Formula contains Vitamin E",
                "id": "cl4cev9c23lgg0cpnu4zl3ykg",
                "name": "Lippie Stix",
                "price": "5.5",
                "productLink": "https://colourpop.com/collections/lippie-stix",
                "productType": "lipstick",
                "tagList": Array [
                  "cruelty free",
                  "Vegan",
                ],
                "websiteLink": "https://colourpop.com",
              },
            ],
          },
        },
        "_X": null,
      },
    },
  ],
}
`;

exports[`check the behavior of the network service: fetched type based products successfully 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "
  query fetchProducts($first: Int!, $productType: String, $after: String) {
    products(first: $first, after:$after, where: {productType: $productType}, orderBy: rating_DESC) {
      id
      name
      description
      rating
      price
      brand
      tagList
      category
      productType
      apiFeaturedImage
      websiteLink
      productLink
    }
  }
  ",
      Object {
        "after": undefined,
        "first": 2,
        "productType": "lipstick",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "_U": 0,
        "_V": 1,
        "_W": Object {
          "data": Object {
            "products": Array [
              Object {
                "apiFeaturedImage": "//s3.amazonaws.com/donovanbailey/products/api_featured_images/000/001/046/original/open-uri20180708-4-1f333k1?1531086651",
                "brand": "colourpop",
                "category": "lipstick",
                "description": "Lippie Stix Formula contains Vitamin E",
                "id": "cl4cev9c23lgg0cpnu4zl3ykg",
                "name": "Lippie Stix",
                "price": "5.5",
                "productLink": "https://colourpop.com/collections/lippie-stix",
                "productType": "lipstick",
                "tagList": Array [
                  "cruelty free",
                  "Vegan",
                ],
                "websiteLink": "https://colourpop.com",
              },
              Object {
                "apiFeaturedImage": "//s3.amazonaws.com/donovanbailey/products/api_featured_images/000/001/047/original/open-uri20180708-4-e7idod?1531087336",
                "brand": "colourpop",
                "category": "lipstick",
                "description": "Blotted Lip Sheer matte lipstick that creates the perfect popsicle pout!",
                "id": "cl4cev9d83lgp0cpnot1lngtf",
                "name": "Blotted Lip",
                "price": "5.5",
                "productLink": "https://colourpop.com/collections/lippie-stix?filter=blotted-lip",
                "productType": "lipstick",
                "tagList": Array [
                  "cruelty free",
                  "Vegan",
                ],
                "websiteLink": "https://colourpop.com",
              },
            ],
          },
        },
        "_X": null,
      },
    },
  ],
}
`;
